<resources>
    <string name="app_name">To Do List</string>
    <string name="add_item_hint">Add a new item ...</string>
    <string name="add">Add</string>
    <string name="edit_item">Edit Item:</string>
    <string name="Done">Done</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="due_date">Due Date:</string>
    <string name="priority">Priority:</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>
    <string name="add_new_task">Add New Task</string>
</resources>
