<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.coremantra.tutorial.todolist.EditTaskFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:ems="10"
                android:id="@+id/etName" />

            <TextView
                android:text="@string/priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                tools:text="@string/priority"
                android:textSize="12sp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_high"
                    android:textColor="@android:color/holo_red_dark"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/radioMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_medium"
                    android:textColor="@android:color/holo_orange_dark"/>
                <RadioButton
                    android:id="@+id/radioLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_low"
                    android:textColor="@android:color/holo_orange_light"/>
            </RadioGroup>

            <TextView
                android:text="@string/due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/due_date"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="12sp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false" />

            <CheckBox
                android:text="@string/Done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cbIsDone" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <Button
                    android:text="@string/save"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:id="@+id/btSave"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@android:color/holo_blue_light"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

                <Button
                    android:text="@string/cancel"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:id="@+id/btCancel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>


