<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.coremantra.tutorial.todolist.EditTaskFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:id="@+id/etName" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp">

            <Button
                android:text="@string/save"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/btSave"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@android:color/holo_blue_light"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

            <Button
                android:text="@string/cancel"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"

                android:id="@+id/btCancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />
        </LinearLayout>

        <CheckBox
            android:text="@string/Done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbIsDone"
            android:layout_above="@+id/linearLayout"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_marginBottom="9dp" />
    </RelativeLayout>


</FrameLayout>


