<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.coremantra.tutorial.todolist.EditTaskFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <!--<TextView-->
            <!--android:text="@string/edit_item"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--tools:text="@string/edit_item"-->
            <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
            <!--android:textAppearance="@style/TextAppearance.AppCompat.Headline" />-->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:id="@+id/etName" />

        <CheckBox
            android:text="@string/Done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/cbIsDone" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <Button
                android:text="@string/save"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/btSave"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@android:color/holo_blue_light" />

            <Button
                android:text="@string/cancel"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"

                android:id="@+id/btCancel" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>


